--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,22 @@ html {
 }
 body {
     background-color: LightGray;
+    font-family: 'Roboto', sans-serif;
 }
 div {
     border: 1px solid Chocolate;
+}
+button {
+    text-shadow: none;
+    border-style: none;
+    border-radius: 4px;
+    padding: 1rem 1.5rem;
+    width: 9.688rem;
+    background-color: #f15a29;
+    color: white;
+    font-size: 1.125rem;
+    border-color: #f15a29;
+
 }
 
 /* Navigation Section */
@@ -18,6 +31,7 @@ div {
 .top-navigation > .content {
 	height: 4.35rem;
 	margin: 0 auto;
+    width: 970px;
 	padding: 0px 15px;
 	box-sizing: border-box;
 	color: #838994;
@@ -33,7 +47,6 @@ div {
 
 .top-navigation .links {
 	float: right;
-    font-family: 'Roboto', sans-serif;
     color: #838994;
     font-size: 1.1rem;
     margin-top: 1.5rem;
@@ -45,7 +58,7 @@ div {
 
 .top-navigation .links li {
 	display: inline-block;
-	margin-left: px;
+	margin-left: 10px;
 	border: 1px solid Chocolate;
 }
 
@@ -57,4 +70,44 @@ div {
 .top-navigation .links li:hover {
 	cursor: pointer;
     color: #333333;
+}
+
+/* Middle Section */
+section {
+	background-image: url('../images/karma-background-image.jpg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45.938rem;
+    overflow: auto;
+}
+
+.introduction h1,
+.introduction h3 {
+    color: white;
+    text-align: center;
+    font-weight: 300;
+}
+
+.introduction p {
+    color: white;
+    text-align: center;
+}
+
+.introduction h1 {
+    margin-top: 17.5rem;
+    font-size: 3.125rem;
+}
+
+.introduction button{
+    text-align: center
+    color: white;
+    display: block;
+    margin: auto;
+}
+.introduction button:hover {
+    cursor: pointer;
+    background-color: #d9400e;
+    border-color: #cf3d0e;
+
 }
