--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,11 @@ button {
     font-weight: 300;
 }
 
+.introduction h3{
+    font-weight: 300;
+    font-size: 1.5rem;
+}
+
 .introduction p {
     color: white;
     text-align: center;
